# crosscat

./: .gitignore  .pre-commit-config.yaml  README.md  lpm_exp.py  lpm_exp_script.py  mkdocs.yml  new_xcures.py  pyproject.toml  test.ipynb  test_simple.py
.github/: dependabot.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  release.yml  ruff.yml  test.yml
docs/: index.md
examples/: crosscat_demo.py  lpm_experiment_script.py
genjaxmix/: core.py  distributions.py
genjaxmix/_dpmm/: dpmm.py
genjaxmix/analytical/: loglogpdf.py  logpdf.py  marginal_likelihood.py  posterior.py  sufficient_statistics.py
genjaxmix/conjugacy/: sufficient_statistics.py  test.py
genjaxmix/dpmm/: dpmm.py
genjaxmix/model/: __init__.py  compile.py  crosscat.py  dsl.py  model.py  proposal_builder.py  utils.py  viz.py
slides/: slides.qmd  styles.css
src/genjaxmix/: __init__.py  conjugacy.py  dpmm.py  rejuvenation.py  smc.py  utils.py  vectorized.py  vectorized_rejuvenation.py
src/genspn/: __init__.py  distributions.py  io.py  jax_distributions.py  read.py  smc.py
test/: test_compile.py  test_crosscat.py  test_distribution.py  test_dsl.py  test_io.py  test_logpdf.py  test_marginal_likelihood.py  test_mixture_model.py  test_model.py  test_parameter_proposal.py  test_score.py  test_smc.py  test_sufficient_statistics.py
